--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
        "value": "Paste here"
   },
   "MONGODB_URI": {
-    "description": "A secret String for Mongodb Connection.(Required)"
+    "description": "A secret String for Mongodb Connection."
   },
     "LANGUAGE": {
     "description": "Language you want to use, please enter correct lang code.only english version avilable for now. Use EN-English, SP-Spanish Hi-Hindi.",
